--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: node_js
-node_js:
-    -12
+
+env:
+  - DATABASE_URL=postgres://postgres@localhost:5432/garment_app
+
+node_js:  
+  - 12
+
+before_script:
+  - psql -c 'create database garment_app;' -U postgres
+  - psql -U postgres -d garment_app -a -f ./sql/garment.sql
+
+services:
+  - postgresql
